objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__O2_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if enhanced scheduling and optimization engine is used</description>
        <label>Use enhanced scheduling and optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDemoData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDemoData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkfsl__Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                    <default>true</default>
                    <label>Building</label>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Plant</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Space</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkfsl__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Service Territories</relationshipLabel>
        <relationshipName>Service_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkfsl__Maximum_Occupancy__c</fullName>
        <label>Maximum Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Select_for_Facility_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this service territory will be considered as top level territory when creating a facility plan</description>
        <inlineHelpText>If checked, this service territory will be considered as top level territory when creating a facility plan</inlineHelpText>
        <label>Allow facility plans</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <columns>Name</columns>
        <columns>wkfsl__Facility_Type__c</columns>
        <columns>ParentTerritory</columns>
        <columns>wkfsl__Location__c</columns>
        <columns>wkfsl__Maximum_Occupancy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <listViews>
        <fullName>San_Francisco_Service_Territories</fullName>
        <columns>Name</columns>
        <columns>wkfsl__Facility_Type__c</columns>
        <columns>ParentTerritory</columns>
        <columns>wkfsl__Location__c</columns>
        <columns>wkfsl__Maximum_Occupancy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>contains</operation>
            <value>Headquarters,HQ,West Tower,South Campus</value>
        </filters>
        <label>San Francisco Service Territories</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>wkfsl__Max_Occupancy_Must_be_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>wkfsl__Maximum_Occupancy__c &lt; 0</errorConditionFormula>
        <errorMessage>Maximum Occupancy must be a positive number</errorMessage>
    </validationRules>
</CustomObject>